--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ dioxus-fullstack = "=0.6.1"
 dioxus-clipboard = "=0.2.0"
 reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive"] }
+async-std = "=1.13.0"
+web-sys = { version = "=0.3.77", features = ["Navigator", "Clipboard"] }
 
 [build-dependencies]
 dotenv = "0.15.0"
