--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
         "svelte-check": "=4.1.4",
         "typescript": "=5.7.3",
         "vite": "=6.2.0"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "=4.0.9",
+        "tailwindcss": "=4.0.9"
     }
 }
