--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
         "@sveltejs/adapter-auto": "^4.0.0",
         "@sveltejs/kit": "=2.17.2",
         "@sveltejs/vite-plugin-svelte": "=5.0.3",
+        "bits-ui": "^1.3.4",
+        "clsx": "^2.1.1",
+        "lucide-svelte": "^0.476.0",
         "svelte": "=5.20.4",
         "svelte-check": "=4.1.4",
+        "tailwind-merge": "^3.0.2",
+        "tailwind-variants": "^0.3.1",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "=5.7.3",
         "vite": "=6.2.0"
     },
     "dependencies": {
         "@tailwindcss/vite": "=4.0.9",
+        "mode-watcher": "^0.5.1",
         "tailwindcss": "=4.0.9"
     }
 }
