--- a/components.json
+++ b/components.json
@@ -2,7 +2,7 @@
 	"$schema": "https://next.shadcn-svelte.com/schema.json",
 	"style": "default",
 	"tailwind": {
-		"config": "tailwind.config.ts",
+		"config": "tailwind.config.js",
 		"css": "src/app.css",
 		"baseColor": "slate"
 	},
