--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
         "@sveltejs/adapter-auto": "^4.0.0",
         "@sveltejs/kit": "=2.17.2",
         "@sveltejs/vite-plugin-svelte": "=5.0.3",
+        "autoprefixer": "^10.4.20",
         "bits-ui": "^1.3.4",
         "clsx": "^2.1.1",
         "lucide-svelte": "^0.476.0",
+        "postcss": "^8.5.3",
         "svelte": "=5.20.4",
         "svelte-check": "=4.1.4",
         "tailwind-merge": "^3.0.2",
@@ -29,8 +31,7 @@
         "vite": "=6.2.0"
     },
     "dependencies": {
-        "@tailwindcss/vite": "=4.0.9",
         "mode-watcher": "^0.5.1",
-        "tailwindcss": "=4.0.9"
+        "tailwindcss": "3"
     }
 }
