--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
+        "start": "bun ./build/index.js",
         "preview": "vite preview",
         "prepare": "svelte-kit sync || echo ''",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -23,6 +24,7 @@
         "lucide-svelte": "^0.476.0",
         "postcss": "^8.5.3",
         "svelte": "=5.20.4",
+        "svelte-adapter-bun": "^0.5.2",
         "svelte-check": "=4.1.4",
         "tailwind-merge": "^3.0.2",
         "tailwind-variants": "^0.3.1",
