--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ node_modules
 # OS
 .DS_Store
 Thumbs.db
-di*
+dioxus
 
 # Env
 .env
@@ -24,4 +24,5 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 # Lock
-bun.lockb
+bun.lock*
+package-lock.json
