--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "devDependencies": {
         "@fontsource/fira-mono": "^5.0.0",
         "@neoconfetti/svelte": "^2.0.0",
-        "@sveltejs/adapter-auto": "^4.0.0",
+        "@sveltejs/adapter-node": "^5.2.12",
         "@sveltejs/kit": "=2.17.2",
         "@sveltejs/vite-plugin-svelte": "=5.0.3",
         "autoprefixer": "^10.4.20",
